--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://aayush2761.github.io/passwordGenerator",
+  "homepage":"https://aayush2761.github.io/passwordGenerator/",
   "name": "passwordgenerator",
   "private": true,
   "version": "0.0.0",
